# arceos_experiment

./: Cargo.toml
api/axfeat/: Cargo.toml
apps/boards/raspi4-usb/: Cargo.toml  README.md
apps/boards/raspi4-usb/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: cmd.rs
crates/board_raspi4/: .gitignore  Cargo.toml
crates/board_raspi4/src/: lib.rs
crates/brcm_pcie/src/: bcm2711.rs
crates/driver_common/src/: lib.rs
crates/driver_mailbox/: Cargo.toml
crates/driver_mailbox/src/: lib.rs  mailbox.rs
crates/driver_mailbox/src/bcm/: raspberrypi.rs
crates/driver_pci/: Cargo.toml
crates/driver_pci/src/: bcm2711.rs  lib.rs  types.rs
crates/driver_usb/: Cargo.toml
crates/driver_usb/src/: lib.rs
crates/driver_usb/src/host/: mod.rs  xhc.rs
crates/driver_usb/src/host/port/: spawner.rs
crates/driver_usb/src/host/port/init/: resetter.rs
crates/driver_usb/src/host/structures/: scratchpad.rs
crates/driver_usb/src/host/vl805/: mod.rs
crates/driver_usb/src/host/xhci/: arm_mailbox.rs  mod.rs  propertytags.rs  regs.rs  xhci_controller.rs
crates/driver_usb/src/host/xhci/event_ring/: mod.rs
crates/driver_usb/src/host/xhci/vl805/: mailbox.rs  mod.rs  register_operations_init_xhci.rs  regs.rs
crates/driver_usb/src/xhci/: mod.rs
crates/driver_usb/src/xhci/vl805/: mod.rs
crates/driver_xhci/: Cargo.toml
crates/driver_xhci/src/: lib.rs  register_operations_init_xhci.rs
crates/driver_xhci/src/command_ring/: command_type.rs  mod.rs
crates/driver_xhci/src/event_ring/: mod.rs  segment_table.rs
crates/page_table_entry/src/arch/: aarch64.rs  mod.rs
modules/axdriver/: Cargo.toml  build.rs
modules/axdriver/src/: drivers.rs  lib.rs  macros.rs  prelude.rs
modules/axdriver/src/bus/: pci.rs
modules/axdriver/src/structs/: dyn.rs  mod.rs  static.rs
modules/axhal/src/: irq.rs  lib.rs  mem.rs
modules/axhal/src/platform/aarch64_common/: boot.rs  mailbox.rs  mod.rs
modules/axhal/src/platform/aarch64_raspi/: mem.rs  mod.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lib.rs
modules/axusb/: Cargo.toml
modules/axusb/src/: lib.rs
tools/: .gitignore
