[package]
name = "board_raspi4"
version = "0.1.0"
edition = "2021"
authors = ["Rui Zhou<zrufo747@outlook.com>"]
description = "raspi4 board platform"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/brcm-pcie"
documentation = "https://rcore-os.github.io/arceos/brcm-pcie/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
usb-host = ["axdriver/vl805", "axdriver/bcm2711"]



[dependencies]
axdriver = { path= "../../modules/axdriver", features = ["vl805", "bcm2711"]}
axruntime = { path = "../../modules/axruntime", features = ["usb"] }