[package]
name = "arceos-raspi4-usb"
version = "0.1.0"
edition = "2021"
authors = ["Rui Zhou <zrufo747@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../../ulib/axstd", optional = true }
axdriver = { path= "../../../modules/axdriver", features = ["vl805", "bcm2711"]}
axruntime = { path = "../../../modules/axruntime", features = ["usb"] }
axusb = { path = "../../../modules/axusb"}



